--- a/assets/style.css
+++ b/assets/style.css
@@ -2,10 +2,15 @@
     margin: 0;
     padding: 0;
 }
-header,
+header{
+    width: 100%;
+    height: 180px;
+    background-color: #A5ACAF;
+    color: black;
+}
 footer {
     width: 100%;
-    height: 120px;
+    height: 60px;
     background-color: #A5ACAF;
     color: black;
 }
@@ -43,7 +48,7 @@ p {
     right: 15%;
     bottom: 1;
     left: 0;
-    perspective: 999px;
+    perspective: 999999px;
     transform-style: preserve-3d;
   }
   
@@ -60,7 +65,7 @@ p {
   
   .layer:after {
     font: 100px/0.65 metabold;
-    content: 'Prework Study Guide';
+    content: 'Study              Guide';
     white-space: pre;
     text-align: center;
     height: 100%;
